event venues buttons

--- a/lib/eventasaurus_web/components/layouts/root.html.heex
+++ b/lib/eventasaurus_web/components/layouts/root.html.heex
@@ -566,7 +566,7 @@
               <li><a href="/our-story" class="text-sm text-gray-400 hover:text-white transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-white">Our Story</a></li>
               <li><a href="/whats-new" class="text-sm text-gray-400 hover:text-white transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-white">What's New</a></li>
               <li><a href="/invite-only" class="text-sm text-gray-400 hover:text-white transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-white">Get Started</a></li>
-              <li><a href="/events" class="text-sm text-gray-400 hover:text-white transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-white">Browse Events</a></li>
+              <li><a href="/activities" class="text-sm text-gray-400 hover:text-white transition-colors focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-white">Browse Events</a></li>
             </ul>
           </div>
           
