--- a/lib/eventasaurus_web/controllers/page/page_html/home.html.heex
+++ b/lib/eventasaurus_web/controllers/page/page_html/home.html.heex
@@ -106,7 +106,7 @@
           <.radiant_button href="/invite-only" class="text-lg px-8 py-4 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700">
             Start Coordinating
           </.radiant_button>
-          <.radiant_button href="/events" variant="outline" class="text-lg px-8 py-4">
+          <.radiant_button href="/activities" variant="outline" class="text-lg px-8 py-4">
             Explore Real Events
           </.radiant_button>
         </div>
