--- a/lib/eventasaurus_web/controllers/page/page_html/pitch2.html.heex
+++ b/lib/eventasaurus_web/controllers/page/page_html/pitch2.html.heex
@@ -496,7 +496,7 @@
             <.radiant_button href="/register" class="text-lg px-8 py-4 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700">
               Start Building Your Community
             </.radiant_button>
-            <.radiant_button href="/events" variant="outline" class="text-lg px-8 py-4">
+            <.radiant_button href="/activities" variant="outline" class="text-lg px-8 py-4">
               Explore Events
             </.radiant_button>
           </div>
