--- a/lib/eventasaurus_web/controllers/ticket_html/verify.html.heex
+++ b/lib/eventasaurus_web/controllers/ticket_html/verify.html.heex
@@ -24,7 +24,7 @@
           </p>
           <p class="text-gray-600">
             📅 <%= if @order.event.start_at do %>
-              <%= Calendar.strftime(@order.event.start_at, "%B %d, %Y at %I:%M %p") %>
+              <%= Calendar.strftime(@order.event.start_at, "%B %d, %Y at %H:%M") %>
             <% else %>
               Date and time to be determined
             <% end %>
