--- a/lib/eventasaurus_web/controllers/category_demo_html/show.html.heex
+++ b/lib/eventasaurus_web/controllers/category_demo_html/show.html.heex
@@ -15,7 +15,7 @@
         <div class="space-y-2 text-gray-700">
           <div>
             <span class="font-medium">Date & Time:</span>
-            <%= Calendar.strftime(@event.starts_at, "%B %d, %Y at %I:%M %p") %>
+            <%= Calendar.strftime(@event.starts_at, "%B %d, %Y at %H:%M") %>
           </div>
           <%= if @event.venue do %>
             <div>
