--- a/lib/eventasaurus_web/controllers/stripe_connect_html/status.html.heex
+++ b/lib/eventasaurus_web/controllers/stripe_connect_html/status.html.heex
@@ -12,7 +12,7 @@
       
       <div class="mt-4 text-green-700">
         <p><strong>Account ID:</strong> <%= @connect_account.stripe_user_id %></p>
-        <p><strong>Connected on:</strong> <%= Calendar.strftime(@connect_account.connected_at, "%B %d, %Y at %I:%M %p") %></p>
+        <p><strong>Connected on:</strong> <%= Calendar.strftime(@connect_account.connected_at, "%B %d, %Y at %H:%M") %></p>
       </div>
       
       <div class="mt-6">
