--- a/lib/eventasaurus_web/live/event_manage_live.html.heex
+++ b/lib/eventasaurus_web/live/event_manage_live.html.heex
@@ -310,7 +310,7 @@
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                     <span>
-                      Deadline: <%= Calendar.strftime(@event.polling_deadline, "%B %d, %Y at %I:%M %p") %>
+                      Deadline: <%= Calendar.strftime(@event.polling_deadline, "%B %d, %Y at %H:%M") %>
                     </span>
                   </div>
                   <div class="ml-6">
@@ -1249,7 +1249,7 @@
                       <span class="text-gray-500">registered</span>
                     </div>
                     <div class="text-gray-400 text-xs">
-                      <%= Calendar.strftime(participant.inserted_at, "%m/%d %I:%M %p") %>
+                      <%= Calendar.strftime(participant.inserted_at, "%m/%d %H:%M") %>
                     </div>
                   </div>
                 <% end %>
