--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -4,10 +4,11 @@ if [ -n "$FLY_APP_NAME" ]; then
   export DNS_CLUSTER_QUERY="${FLY_APP_NAME}.internal"
   export RELEASE_NODE="${FLY_APP_NAME}-${FLY_IMAGE_REF##*-}@${FLY_PRIVATE_IP}"
   # configure node for distributed erlang with IPV6 support
-  export ERL_AFLAGS="-proto_dist inet6_tcp"
-  # Don't force database connections to IPv6 - PlanetScale needs IPv4
-  # See: https://github.com/razrfly/cinegraph/issues/375
-  # export ECTO_IPV6="true"
+  # Also use native DNS resolver (getaddrinfo) instead of Erlang's inet_res
+  # This fixes nxdomain errors for .flympg.net domains on Fly.io
+  export ERL_AFLAGS="-proto_dist inet6_tcp -kernel inet_native_dns true"
+  # Fly Managed Postgres uses IPv6 internally
+  export ECTO_IPV6="true"
 fi
 
 export RELEASE_DISTRIBUTION="name"
